added generated text from ChatGPT

--- a/index.html
+++ b/index.html
@@ -752,57 +752,46 @@
         };
         // Sample hypnosis script - can be used as default
         const sampleScript = `
-Begin by finding a comfortable position in your bed. As you lie down, close your eyes and take a deep, slow breath in… and exhale gently. Let your body begin to relax with each breath. With every inhale, imagine drawing in peaceful, healing energy; with every exhale, feel tension and stress melt away. Notice how your body feels heavier and more relaxed with each passing moment.
+Begin by settling comfortably, gently allowing your eyes to close. Allow your breath to deepen naturally, each inhale drawing peaceful, cleansing energy into your being, each exhale releasing doubt, hesitation, and resistance.
 
-Allow your muscles—from the crown of your head down to your toes—to soften and release. Picture a warm, soothing light gently flowing over you, calming your mind and body. You are safe, you are relaxed, and you are ready to journey into a deep state of restorative sleep.
+As you relax deeply, know that you are safe, supported, and perfectly aligned with the wisdom of the quantum universe. You are precisely where you need to be at this moment, embracing growth and transformation.
 
-Now, envision the infinite quantum universe around you—a boundless field of energy and possibility. Imagine tiny shimmering particles of light that represent every aspect of healing and transformation. As you float in this vast expanse, sense that each particle is imbued with the power of self-healing. They are here to nurture every cell of your body, repairing and rejuvenating you at the most profound level.
+You are courageous, Jason, and your journey of 90 days of sobriety reflects immense inner strength and resilience. Embrace this powerful affirmation:
 
-Feel these quantum energies gently infusing every fiber of your being. With each breath, you draw in these healing vibrations that restore balance, vitality, and strength. Visualize these particles gathering around you, forming a luminous cocoon that protects and energizes your body and mind. In this sacred space, you are aligned with the universe’s eternal power to heal and transform.
+“I honor my journey, knowing that each step forward deepens my self-awareness, healing, and clarity.”
 
-Now, let your mind embrace the positive affirmations designed to nurture your sobriety and joy. In this serene state, repeat silently to yourself:
+Recognize with compassionate honesty that your hesitation to complete the 4th and 5th steps is not weakness, but a reflection of your profound sensitivity and depth. Affirm clearly within:
 
-“I am strong, centered, and completely capable of living a sober life.”
-“Every day, I choose clarity, balance, and wellness.”
-“I embrace my inner power, knowing that I deserve a life filled with happiness and abundance.”
-“I nurture my heart, and I attract a loving, supportive marriage that celebrates mutual growth and joy.”
-Allow these affirmations to settle deep within your subconscious, anchoring your intentions for a healthy, balanced, and happy life. Trust that these words are seeds of positive change, sprouting resilience and transforming your inner world.
+“I lovingly release all fears and doubts. My past experiences serve as empowering lessons guiding me toward profound freedom and self-understanding.”
 
-Now, shift your focus to your unique talents in robotics. Imagine a clear, radiant vision of your future self—a visionary innovator using your god-given talents to create breakthroughs in robotics. Picture a dynamic workshop where creativity meets precision, where each new idea is celebrated and nurtured.
+Allow the quantum energies around you to envelop your spirit, reinforcing your inherent ability to manifest healing, forgiveness, and openness. Visualize yourself standing confidently, radiantly alive with courage and peace, completing these important steps effortlessly, lifted by universal support.
 
-See yourself effortlessly manifesting innovative designs and groundbreaking solutions. Feel the excitement and satisfaction of using your skills to improve lives, transforming challenges into opportunities. Let this vision fill you with a sense of purpose, knowing that every step you take is guided by your innate genius and passion. You are a creator, a pioneer, and every moment of your life reinforces your commitment to your craft.
+“I embrace my truth openly and fearlessly, trusting that vulnerability is the gateway to my greatest strength and profound healing.”
 
-As these visions and affirmations merge into your consciousness, feel a profound sense of unity and purpose. The healing quantum energy surrounds you, the affirmations solidify your resolve, and your creative vision in robotics sparks inspiration. In this perfect balance, you are ready to drift into a deep, restorative sleep.
+Reflecting upon your innate gift for robotics and creativity, affirm powerfully:
 
-Now, let go of any lingering thoughts. Allow your body and mind to surrender completely to sleep, knowing that the positive energy, healing, and inspiration will continue to work within you as you rest. Your subconscious mind is absorbing these messages, ensuring that you awaken renewed, empowered, and ready to manifest your brightest future.
+“My mind is a brilliant, limitless channel for innovation, creativity, and inspired solutions. I trust my intuition and quantum alignment to effortlessly manifest success and fulfillment in all my endeavors.”
 
-Take one final deep breath, exhale slowly, and as the theta waves of this soundtrack cradle your mind, let your awareness dissolve into the peaceful rhythm of sleep. Good night, and may you awaken with renewed strength and purpose.
+Deep within your subconscious, plant the seed of harmonious relationships, affirming your loving marriage and nurturing home environment:
 
-Begin by finding a comfortable position in your bed. As you lie down, close your eyes and take a deep, slow breath in… and exhale gently. Let your body begin to relax with each breath. With every inhale, imagine drawing in peaceful, healing energy; with every exhale, feel tension and stress melt away. Notice how your body feels heavier and more relaxed with each passing moment.
+“I attract and nurture harmonious, supportive relationships grounded in mutual respect, joy, and deep emotional intimacy.”
 
-Allow your muscles—from the crown of your head down to your toes—to soften and release. Picture a warm, soothing light gently flowing over you, calming your mind and body. You are safe, you are relaxed, and you are ready to journey into a deep state of restorative sleep.
+Feel your intuitive abilities deepening, your sensitivity attuning finely to the quantum fabric connecting all life. Embrace fully the quantum truth:
 
-Now, envision the infinite quantum universe around you—a boundless field of energy and possibility. Imagine tiny shimmering particles of light that represent every aspect of healing and transformation. As you float in this vast expanse, sense that each particle is imbued with the power of self-healing. They are here to nurture every cell of your body, repairing and rejuvenating you at the most profound level.
+“I am infinitely connected, effortlessly accessing the wisdom and guidance of the universe, allowing synchronicities to guide my path with ease and grace.”
 
-Feel these quantum energies gently infusing every fiber of your being. With each breath, you draw in these healing vibrations that restore balance, vitality, and strength. Visualize these particles gathering around you, forming a luminous cocoon that protects and energizes your body and mind. In this sacred space, you are aligned with the universe’s eternal power to heal and transform.
+You are deserving, Jason, of profound happiness, deep love, and boundless fulfillment. Affirm gently yet powerfully:
 
-Now, let your mind embrace the positive affirmations designed to nurture your sobriety and joy. In this serene state, repeat silently to yourself:
+“I am worthy of love, abundance, joy, and peace. Each day, I grow closer to my authentic self, aligning fully with my highest purpose and potential.”
 
-“I am strong, centered, and completely capable of living a sober life.”
-“Every day, I choose clarity, balance, and wellness.”
-“I embrace my inner power, knowing that I deserve a life filled with happiness and abundance.”
-“I nurture my heart, and I attract a loving, supportive marriage that celebrates mutual growth and joy.”
-Allow these affirmations to settle deep within your subconscious, anchoring your intentions for a healthy, balanced, and happy life. Trust that these words are seeds of positive change, sprouting resilience and transforming your inner world.
+Allow these affirmations to anchor deeply within your subconscious, harmonizing effortlessly with your nightly theta wave sessions, reinforcing clarity, healing, and purpose as you sleep deeply and peacefully.
 
-Now, shift your focus to your unique talents in robotics. Imagine a clear, radiant vision of your future self—a visionary innovator using your god-given talents to create breakthroughs in robotics. Picture a dynamic workshop where creativity meets precision, where each new idea is celebrated and nurtured.
+Rest now, Jason, in the powerful embrace of universal wisdom, knowing each moment carries you gracefully toward the fulfillment of your dreams.
 
-See yourself effortlessly manifesting innovative designs and groundbreaking solutions. Feel the excitement and satisfaction of using your skills to improve lives, transforming challenges into opportunities. Let this vision fill you with a sense of purpose, knowing that every step you take is guided by your innate genius and passion. You are a creator, a pioneer, and every moment of your life reinforces your commitment to your craft.
+Rest deeply, sleep peacefully, and awaken refreshed, renewed, and aligned with the quantum energies of healing, growth, and transformation.
 
-As these visions and affirmations merge into your consciousness, feel a profound sense of unity and purpose. The healing quantum energy surrounds you, the affirmations solidify your resolve, and your creative vision in robotics sparks inspiration. In this perfect balance, you are ready to drift into a deep, restorative sleep.
+You are loved, supported, and infinitely blessed. Sleep now, Jason, and awaken to the dawn of a new day filled with infinite possibilities and boundless joy.`;
 
-Now, let go of any lingering thoughts. Allow your body and mind to surrender completely to sleep, knowing that the positive energy, healing, and inspiration will continue to work within you as you rest. Your subconscious mind is absorbing these messages, ensuring that you awaken renewed, empowered, and ready to manifest your brightest future.
-
-Take one final deep breath, exhale slowly, and as the theta waves of this soundtrack cradle your mind, let your awareness dissolve into the peaceful rhythm of sleep. Good night, and may you awaken with renewed strength and purpose.`;
 
         // Brainwave frequency ranges and descriptions
         const brainwaveRanges = {
